test/invalid/baseline/union-promise.txt
Syntax error at line 1 in union-promise.webidl:
 (Promise<DOMString> or boolean) Typedef;
                     ^ Type `Promise` cannot be included in a union type
